# NomadX

./: .gitignore  Atlas_Raman_Pitch_Deck.pptx  MODELS_SUMMARY.md  PAPER.html  PAPER.md  PLAN.md  README.md  REVIEW.md  REVIEW_BIOLOGY.md  make_pitch_deck.py  requirements.txt  streamlit_app.py  subagents
FINAL/: PAPER.md  README.md
artifacts/: plsda_raw_metadata.json  stage15f_classifier.joblib  stage15f_feature_columns.json  stage15f_loso_predictions.parquet  stage15f_loso_summary.csv  stage15f_mcr_global.joblib  stage15f_metadata.json  stage15f_paper_stats.json  stage15f_roi_pca.joblib  stage15f_sam_templates.joblib
atlas/: __init__.py  band_features.py  calibrated_ensemble.py  ensemble.py  evaluate.py  inference.py  io.py  lambda_selector.py  memprobe.py  memprobe_v2.py  models_classical.py  models_cnn.py  models_transformer.py  preprocess.py  qc.py  spatial_features.py  spectral_features.py  splits.py  stacking.py  train.py  unmix_features.py
inference_api/: README.md  README_PLSDA_ENDPOINT.md  modal_app.py  pyproject.toml
notebooks/: atlas_driver.ipynb  band_chemistry.ipynb  dataset_gallery.ipynb  dataset_visualization.ipynb  feature_engineering.ipynb
orchestration/: README.md  demo_fault.py  demo_pipeline.sh  show_dataset.py  show_dataset.sh  verify_lineage.py
plan/: 00_status.md  01_data.md  02_decisions.md  03_architecture.md  04_eda_plan.md  05_implementation_order.md  06_risks.md  07_findings.md  08_expectations.md  09_future_work.md  10_decision_log.md  11_references.md  12_data_gaps_and_external_datasets.md  13_methods_research_synthesis.md  (+4 more)
(+234 files in other folders)
